Final Touch, Done, App is functioning

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,8 +1,12 @@
 .footer {
-    padding: 5px 0;
-    color: #ffffff;
-    background-color: black;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
-    text-align: center;
+    color: white;
+    background-color: black;
     border-top: 10px solid #B30600;
-}
+    text-align: center;
+  }
