--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,13 +1,13 @@
 .header {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
-    padding: 30px 0;
+    padding: 30px 10px;
     color: #ffffff;
     background-color: black;
-    width: 100%;
     text-align: center;
     border-bottom: 10px solid #B30600;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 .logo {
